--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -32,66 +32,64 @@
   position: absolute;
 }
 
-.navbar > ul > li > div, .navbar > ul > li > ul > li > div {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 1rem;
+.navbar > ul > li > div,
+.navbar > ul > li > ul > li > div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
 }
 
 .navbar > ul > li > ul > li > div {
-    gap: 4rem;
+  gap: 4rem;
 }
 
 .navbar > ul > li > ul > li {
-    padding: 0.5rem 0;
-    border-bottom: 1px solid #FF750080;
-    width: 15rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  padding: 0.5rem 0;
+  border-bottom: 1px solid #ff750080;
+  width: 15rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .navbar > ul > li > ul > li:nth-last-child(1) {
-    border: none;
+  border: none;
 }
 
 .navbar > ul > li > ul {
-    background-color: #fff;
-    border-radius: 1rem;
-    padding: 1rem 0;
-    width: 15rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  background-color: #fff;
+  border-radius: 1rem;
+  padding: 1rem 0;
+  width: 15rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .navbar > ul > li > ul > li > ul {
-    position: absolute;
-    top: -1rem;
-    left: 14rem;
-    background-color: white;
-    border-radius: 1rem;
-    width: 15rem;
+  position: absolute;
+  top: -1rem;
+  left: 14rem;
+  background-color: white;
+  border-radius: 1rem;
+  width: 15rem;
 }
 
 .navbar > ul > li > ul > li > ul > li {
-    border-bottom: 1px solid #FF750080;
-    padding: 0.5rem;
-    margin: 0.5rem 1rem;
+  border-bottom: 1px solid #ff750080;
+  padding: 0.5rem;
+  margin: 0.5rem 1rem;
 }
 
 .navbar > ul > li > ul > li > ul > li:nth-last-child(1) {
-    border: none;
+  border: none;
 }
 
-
 @media screen and (max-width: 800px) {
-    .navbar {
-        display: none;
-        /* position: absolute;
-        transform: translateX(-2000px); */
-    }
+  .navbar {
+    display: none;
+  }
 }
