--- a/src/Components/Achievements/Achievements.module.css
+++ b/src/Components/Achievements/Achievements.module.css
@@ -1,15 +1,22 @@
 .achieve {
-    width: 100%;
-    padding: 4rem 10rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  width: 100%;
+  padding: 4rem 10rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5rem;
+}
+
+.achieve > div:nth-child(1) {
+  width: 100%;
+  display: flex;
+  justify-content: start;
+}
+
+@media screen and (max-width: 800px) {
+  .achieve {
+    padding: 4rem 1rem;
     gap: 5rem;
   }
-
-  .achieve > div:nth-child(1) {
-    width: 100%;
-    display: flex;
-    justify-content: start;
-  }
+}
