--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -86,13 +86,77 @@
 }
 
 .footer > div:nth-child(3) h2 {
-    font-size: 11px;
+  font-size: 11px;
 }
 
 .footer > div:nth-child(3) > div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: start;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  gap: 0.8rem;
+}
+
+@media screen and (max-width: 800px) {
+  .footer {
+    gap: 1rem;
+  }
+  .footer > div:nth-child(1) {
+    height: 8rem;
     gap: 0.8rem;
+  }
+  .footer > div:nth-child(1) > p:nth-child(1) {
+    font-size: 1.1rem;
+  }
+  .footer > div:nth-child(1) > p:nth-child(2) {
+    font-size: 0.9rem;
+  }
+  .footer > div:nth-child(2) {
+    width: 96%;
+    padding: 0;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+  }
+  .footer > div:nth-child(2) > div:nth-child(1) {
+    padding: 0 2rem;
+    align-items: center;
+    gap: 1rem;
+  }
+
+  .footer > div:nth-child(2) > div:nth-child(2),
+  .footer > div:nth-child(2) > div:nth-child(3),
+  .footer > div:nth-child(2) > div:nth-child(4) {
+    justify-content: center;
+    align-items: center;
+    gap: 0.4rem;
+  }
+  .footer > div:nth-child(2) ul {
+    justify-content: center;
+    align-items: center;
+    gap: 0.3rem;
+  }
+  .footer > div:nth-child(2) > div:nth-child(4) > ul > li {
+    gap: 0.5rem;
+  }
+  .footer span {
+    font-size: 1.1rem;
+  }
+  .footer p, .footer li {
+    font-size: 0.8rem;
+  }
+  .footer > div:nth-child(3) {
+    padding: 0.5rem 0.5rem;
+    gap: 0.2rem;
+  }
+  .footer > div:nth-child(3) h2 {
+    font-size: 9px;
+  }
+  .footer > div:nth-child(3) p {
+    font-size: 0.7rem;
+  } 
+  .footer > div:nth-child(3) > div {
+    gap: 0.5rem;
+  }  
 }
