--- a/src/Components/Journey/Journey.module.css
+++ b/src/Components/Journey/Journey.module.css
@@ -72,3 +72,50 @@
 #clicked {
   background-color: #fecb02;
 }
+
+@media screen and (max-width: 800px) {
+  .journey {
+    padding: 2rem 1rem;
+    gap: 2rem;
+  }
+  .journey p {
+    font-size: 1rem;
+  }
+  .journey > div,
+  .journey > div > div {
+    flex-direction: column;
+    justify-content: center;
+  }
+  .journey > div > div {
+    gap: 2rem;
+  }
+  .journey > div {
+    height: auto;
+    width: 100%;
+    gap: 1.5rem;
+  }
+  .journey img {
+    margin-top: 1rem;
+    height: 15rem;
+    width: auto;
+  }
+  .journey > div > div > div:nth-child(1) {
+    flex-direction: row;
+  }
+  .journey > div > div > div:nth-child(1) > div {
+    width: auto;
+    height: auto;
+    padding: 1rem 1rem;
+  }
+  .journey > div > div > div:nth-child(2) {
+    flex-direction: row;
+  }
+  .journey > div > div > div:nth-child(2) > div {
+    width: auto;
+    height: auto;
+    padding: 0.7rem 0.5rem;
+  }
+  .journey > div > div > div:nth-child(2) > div > p {
+    font-size: 0.8rem;
+  }
+}
