--- a/src/Components/Showcase/Showcase.module.css
+++ b/src/Components/Showcase/Showcase.module.css
@@ -92,3 +92,31 @@
   box-shadow: 0px 8px 24.1px 0px #00000040;
   border-radius: 0.75rem;
 }
+
+@media screen and (max-width: 800px) {
+  .show {
+    padding: 5rem 0.5rem;
+    gap: 2rem;
+  }
+  .show > div:nth-child(1) {
+    width: 100%;
+    height: 4rem;
+  }
+  .show > div:nth-child(1) > div {
+    height: 4rem;
+    width: 33.333%;
+    padding: 0 0.4rem;
+    gap: 0.2rem;
+  }
+  .show > div:nth-child(1) > div > p {
+    font-size: 1rem;
+  }
+  .show > div:nth-child(2) p {
+    font-size: 0.8rem;
+    padding: 0.8rem 0rem;
+    margin: 0 0.1rem;
+  }
+  .show > div:nth-child(3) > div {
+    gap: 0.5rem;
+  }  
+}
