--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-@import 'swiper/swiper-bundle.css';
+@import "swiper/swiper-bundle.css";
 
 * {
   box-sizing: border-box;
@@ -61,15 +61,21 @@ ul {
 h5 {
   font-weight: 400;
   font-size: 2.5rem;
-  padding: 0rem 3rem;
+  padding: 1.2rem 3rem;
   background-color: #0a5495;
   border-top-right-radius: 2rem;
   border-end-end-radius: 2rem;
   color: white;
-  height: 5rem;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media screen and (max-width: 800px) {
+  h5 {
+    font-size: 1.5rem;
+    padding: 1rem 2rem;
+  }
 }
 
 .swiper {
