--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,13 +71,6 @@ h5 {
   align-items: center;
 }
 
-@media screen and (max-width: 800px) {
-  h5 {
-    font-size: 1.5rem;
-    padding: 1rem 2rem;
-  }
-}
-
 .swiper {
   width: 35rem;
 }
@@ -91,3 +84,15 @@ h5 {
   display: block;
   width: 100%;
 }
+
+
+@media screen and (max-width: 800px) {
+  h5 {
+    font-size: 1.5rem;
+    padding: 1rem 2rem;
+  }
+  .swiper {
+    width: 18rem;
+  }
+}
+
