--- a/src/Components/Form/Form.module.css
+++ b/src/Components/Form/Form.module.css
@@ -62,6 +62,10 @@
   border: none;
 }
 
+.form input {
+  font-size: 1rem;
+}
+
 .form > button {
   background-color: #fecb02;
   box-shadow: 0px 4px 24px 0px #00000040;
