--- a/src/Components/Blog/Blog.module.css
+++ b/src/Components/Blog/Blog.module.css
@@ -65,6 +65,7 @@
 
 .blog > div:nth-child(2) > div:nth-child(1) > p {
   font-size: 25px;
+  width: 90%;
 }
 
 .blog > div:nth-child(2) > div:nth-child(2) {
@@ -137,6 +138,19 @@
   padding: 1rem;
 }
 
+.blog li {
+  color: #fecb02;
+  font-size: 25px;
+  margin-left: 2rem;
+}
+
+.blog ul {
+    list-style-type: disc;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
 @media screen and (max-width: 800px) {
   .blog {
     padding: 1rem 0;
@@ -192,7 +206,7 @@
   }
   .blog > div:nth-child(2) > div:nth-child(2) > div > div > img {
     max-width: 18rem;
-  } 
+  }
   .blog > div:nth-child(2) > div:nth-child(2) > div > div > div > p {
     font-size: 12px;
   }
@@ -200,5 +214,4 @@
     font-size: 18px;
     padding: 0.8rem;
   }
-  
 }
