--- a/src/Components/Blog/Blog.module.css
+++ b/src/Components/Blog/Blog.module.css
@@ -37,7 +37,7 @@
 .blog > div:nth-child(2) > div:nth-child(1) {
   display: flex;
   padding: 1rem 2rem;
-  width: 66%;
+  width: 72%;
   flex-direction: column;
   align-items: start;
   gap: 2rem;
@@ -50,8 +50,8 @@
 }
 
 .blog > div:nth-child(2) > div:nth-child(1) > div {
-  padding: 1.5rem;
-  width: 100%;
+  padding: 1.5rem 2rem;
+  max-width: 100%;
   background-color: #fecb02;
   display: flex;
   justify-content: center;
@@ -72,7 +72,7 @@
   display: flex;
   flex-direction: column;
   padding: 0.4rem 2rem;
-  width: 34%;
+  width: 28%;
   border-left: 1px solid black;
   justify-content: start;
   align-items: center;
