--- a/src/Components/AboutUs/AboutUs.module.css
+++ b/src/Components/AboutUs/AboutUs.module.css
@@ -18,6 +18,13 @@
   align-items: center;
 }
 
+@media screen and (max-width: 1080px) {
+  .about {
+    padding: 4rem 2rem;
+    gap: 3rem;
+  }
+}
+
 @media screen and (max-width: 800px) {
   .about {
     padding: 4rem 1rem;
