--- a/src/Components/CounsellingHero/CounsellingHero.module.css
+++ b/src/Components/CounsellingHero/CounsellingHero.module.css
@@ -29,6 +29,11 @@
   border-radius: 1rem;
 }
 
+.cou img {
+  width: 50%;
+  height: auto;
+}
+
 @media screen and (max-width: 800px) {
   .cou {
     padding: 5rem 1rem;
@@ -44,5 +49,9 @@
     align-items: start;
     justify-content: center;
     gap: 2rem;
+  }
+
+  .cou img {
+    width: 90%;
   }
 }
