--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -39,12 +39,13 @@
   padding: 2rem 0;
   display: flex;
   align-items: start;
-  justify-content: center;
-  gap: 5rem;
+  justify-content: space-between;
+  gap: 3rem;
   border-bottom: 1px solid white;
 }
 
 .footer > div:nth-child(2) > div:nth-child(1) {
+  width: 40%;
   padding: 0 2rem;
   display: flex;
   justify-content: center;
@@ -59,6 +60,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  width: 20%;
 }
 
 .footer > div:nth-child(2) ul {
@@ -67,18 +69,23 @@
   gap: 0.5rem;
 }
 
+.footer li {
+  font-size: 0.8rem;
+}
+
 .footer > div:nth-child(2) > div:nth-child(4) > ul > li {
   display: flex;
   gap: 0.5rem;
+  font-size: 0.8rem;
 }
 
 .footer span {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 
 .footer > div:nth-child(3) {
   width: 100%;
-  padding: 2rem 10rem;
+  padding: 2rem 5rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -100,6 +107,7 @@
 @media screen and (max-width: 800px) {
   .footer {
     gap: 1rem;
+    width: 100%;
   }
   .footer > div:nth-child(1) {
     height: 8rem;
@@ -112,33 +120,40 @@
     font-size: 0.9rem;
   }
   .footer > div:nth-child(2) {
-    width: 96%;
-    padding: 0;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 1.5rem;
+    width: 100%;
+    gap: 2rem;
+    flex-wrap: wrap;
+    padding: 2rem 1rem;
   }
   .footer > div:nth-child(2) > div:nth-child(1) {
+    width: 100%;
     padding: 0 2rem;
-    align-items: center;
     gap: 1rem;
   }
-
+  
   .footer > div:nth-child(2) > div:nth-child(2),
   .footer > div:nth-child(2) > div:nth-child(3),
   .footer > div:nth-child(2) > div:nth-child(4) {
-    justify-content: center;
-    align-items: center;
-    gap: 0.4rem;
-  }
-  .footer > div:nth-child(2) ul {
-    justify-content: center;
-    align-items: center;
-    gap: 0.3rem;
-  }
-  .footer > div:nth-child(2) > div:nth-child(4) > ul > li {
+    display: flex;
+    flex-direction: column;
     gap: 0.5rem;
+    width: 30%;
+  }
+  
+  .footer > div:nth-child(2) ul {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  
+  .footer li {
+    font-size: 0.8rem;
+  }
+  
+  .footer > div:nth-child(2) > div:nth-child(4) > ul > li {
+    display: flex;
+    gap: 0.5rem;
+    font-size: 0.8rem;
   }
   .footer span {
     font-size: 1.1rem;
