--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -59,6 +59,18 @@
     filter: invert(100%);
 }
 
+@media screen and (max-width: 1150px) {
+  .header a {
+    font-size: 0.8rem;
+  }
+  .header > div:nth-child(1) > div:nth-child(2) > div {
+    gap: 1rem;
+  }
+  .header > div:nth-child(1) > div:nth-child(2) > * {
+    padding: 0.5rem 1.2rem;
+  }  
+}
+
 @media screen and (max-width: 800px) {
     .header div:nth-child(1) > div:nth-child(2) {
         display: none;
