--- a/src/Components/MBA/MBA.module.css
+++ b/src/Components/MBA/MBA.module.css
@@ -24,7 +24,7 @@
 .mba h2 {
   color: white;
   background-color: #0a5495;
-  width: 54.5vw;
+  width: 120%;
   padding: 0.8rem 1rem;
   font-size: 32px;
 }
@@ -46,6 +46,12 @@
   margin-left: 0.8rem;
   background-color: #fecb02;
   border-radius: 1rem;
+}
+
+@media screen and (max-width: 1400px) {
+  .mba {
+    padding: 3rem 1rem;
+  }
 }
 
 @media screen and (max-width: 800px) {
