--- a/src/app/navpage/navpage.module.css
+++ b/src/app/navpage/navpage.module.css
@@ -3,7 +3,7 @@
   height: 74vh;
   background-color: #fff9e0;
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: center;
   padding: 1rem 2rem;
 }
