--- a/src/Components/Hero/Hero.module.css
+++ b/src/Components/Hero/Hero.module.css
@@ -80,6 +80,7 @@
     align-items: start;
   }
   .hero > div:nth-child(2) > img:nth-child(2) {
-    height: 24rem;
+    height: 80%;
+    width: auto;
   }
 }
