--- a/src/Components/Hero/Hero.module.css
+++ b/src/Components/Hero/Hero.module.css
@@ -48,6 +48,20 @@
   right: 19rem;
 }
 
+
+@media screen and (max-width: 1000px) {
+  .hero > div:nth-child(2) {
+    display: none;
+  }
+  .hero h2 {
+    font-size: 3.5rem;
+  }
+  .hero p {
+    font-size: 2rem;
+  }
+}
+
+
 @media screen and (max-width: 800px) {
   .hero h2 {
     font-size: 1.75rem;
@@ -63,12 +77,14 @@
   .hero {
     flex-direction: column;
     padding-right: 0;
+    justify-content: space-between;
     padding: 0 1rem;
-    height: 60vh;
+    height: 66vh;
   }
   .hero > div:nth-child(1) {
     padding: 1rem;
     width: 100%;
+    height: 30%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -76,11 +92,13 @@
     gap: 0.5rem;
   }
   .hero > div:nth-child(2) {
-    width: 65%;
+    width: 100%;
     align-items: start;
+    height: 70%;
+    display: block;
   }
   .hero > div:nth-child(2) > img:nth-child(2) {
-    height: 80%;
+    height: 100%;
     width: auto;
   }
 }
