--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -51,7 +51,12 @@
   justify-content: center;
   align-items: start;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
+}
+
+.footer > div:nth-child(2) > div:nth-child(1) div > img {
+  width: auto;
+  height: 1.8rem;
 }
 
 .footer > div:nth-child(2) > div:nth-child(2),
@@ -85,11 +90,10 @@
 
 .footer > div:nth-child(3) {
   width: 100%;
-  padding: 2rem 5rem;
+  padding: 2rem 9rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 5rem;
 }
 
 .footer > div:nth-child(3) h2 {
