--- a/src/Components/Achievements/Achievements.module.css
+++ b/src/Components/Achievements/Achievements.module.css
@@ -1,6 +1,6 @@
 .achieve {
   width: 100%;
-  padding: 4rem 10rem;
+  padding: 4rem 6rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12,6 +12,13 @@
   width: 100%;
   display: flex;
   justify-content: start;
+}
+
+@media screen and (max-width: 1200px) {
+  .achieve {
+    padding: 4rem 2rem;
+    gap: 5rem;
+  }
 }
 
 @media screen and (max-width: 800px) {
