--- a/src/Components/Blog/Blog.module.css
+++ b/src/Components/Blog/Blog.module.css
@@ -43,13 +43,20 @@
   gap: 2rem;
 }
 
+.blog main {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .blog > div:nth-child(2) > div:nth-child(1) > h2 {
   color: #25315d;
   font-size: 2.5rem;
   text-align: left;
 }
 
-.blog > div:nth-child(2) > div:nth-child(1) > div {
+.blog > div:nth-child(2) > div:nth-child(1) > main > div {
   padding: 1.5rem 2rem;
   max-width: 100%;
   background-color: #fecb02;
@@ -58,13 +65,13 @@
   align-items: center;
 }
 
-.blog > div:nth-child(2) > div:nth-child(1) > div > img {
+.blog > div:nth-child(2) > div:nth-child(1) > main > div > img {
   border: 1px solid black;
   max-height: 22rem;
 }
 
 .blog > div:nth-child(2) > div:nth-child(1) > p {
-  font-size: 25px;
+  font-size: 18px;
   width: 90%;
 }
 
@@ -79,7 +86,14 @@
   gap: 3.3rem;
 }
 
-.blog > div:nth-child(2) > div:nth-child(2) > h2 {
+.blog section {
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+.blog > div:nth-child(2) > div:nth-child(2) > section > h2 {
   font-size: 2rem;
   color: #fecb02;
 }
@@ -104,6 +118,7 @@
   justify-content: center;
   align-items: center;
   gap: 1rem;
+  cursor: pointer;
 }
 
 .blog > div:nth-child(2) > div:nth-child(2) > div > div > img {
@@ -120,12 +135,16 @@
   gap: 0.5rem;
 }
 
-.blog > div:nth-child(2) > div:nth-child(2) > div > div > div > p {
+.blog > div:nth-child(2) > div:nth-child(2) > div > div > div p {
   font-family: "Poppins";
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 400;
   line-height: 21px;
   text-align: left;
+}
+
+.blog > div:nth-child(2) > div:nth-child(2) > div > div > div ul {
+  list-style-type: disc;
 }
 
 .blog > div:nth-child(2) > div:nth-child(2) > p {
@@ -138,17 +157,26 @@
   padding: 1rem;
 }
 
-.blog li {
+.blog > div:nth-child(2) > div:nth-child(1) li {
   color: #fecb02;
   font-size: 25px;
   margin-left: 2rem;
 }
 
-.blog ul {
-    list-style-type: disc;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+.blog > div:nth-child(2) > div:nth-child(1) ul {
+  list-style-type: disc;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+@media screen and (max-width: 1070px) {
+  .blog > div:nth-child(1) {
+    padding: 1.5rem 1rem;
+  }
+  .blog > div:nth-child(1) > p {
+    padding: 1rem 1.5rem;
+  }
 }
 
 @media screen and (max-width: 800px) {
@@ -173,13 +201,17 @@
     width: 100%;
     gap: 1.5rem;
   }
+  .blog > div:nth-child(2) > div:nth-child(1) > p {
+    font-size: 14px;
+    width: 100%;
+  } 
   .blog > div:nth-child(2) > div:nth-child(1) > h2 {
     font-size: 1.5rem;
   }
-  .blog > div:nth-child(2) > div:nth-child(1) > div {
+  .blog > div:nth-child(2) > div:nth-child(1) > main > div {
     padding: 1rem;
   }
-  .blog > div:nth-child(2) > div:nth-child(1) > div > img {
+  .blog > div:nth-child(2) > div:nth-child(1) > main > div > img {
     border: 1px solid black;
     max-width: 19rem;
   }
@@ -194,7 +226,7 @@
     justify-content: center;
     gap: 1.6rem;
   }
-  .blog > div:nth-child(2) > div:nth-child(2) > h2 {
+  .blog > div:nth-child(2) > div:nth-child(2) > section > h2 {
     font-size: 1.5rem;
   }
   .blog > div:nth-child(2) > div:nth-child(2) > div {
@@ -207,7 +239,7 @@
   .blog > div:nth-child(2) > div:nth-child(2) > div > div > img {
     max-width: 18rem;
   }
-  .blog > div:nth-child(2) > div:nth-child(2) > div > div > div > p {
+  .blog > div:nth-child(2) > div:nth-child(2) > div > div > div p {
     font-size: 12px;
   }
   .blog > div:nth-child(2) > div:nth-child(2) > p {
