--- a/src/Components/Events/Events.module.css
+++ b/src/Components/Events/Events.module.css
@@ -1,11 +1,11 @@
 .events {
   width: 100%;
-  padding: 4rem 10rem;
+  padding: 2.5rem 6rem;
   display: flex;
   flex-direction: column;
   align-items: start;
   justify-content: center;
-  gap: 4rem;
+  gap: 2rem;
 }
 
 .events > div {
@@ -82,7 +82,7 @@
 
 .events > div > div:nth-child(3) {
   display: flex;
-  gap: 12rem;
+  gap: 4rem;
   justify-content: start;
   align-items: center;
   padding: 0 2rem;
@@ -93,6 +93,7 @@
 }
 
 .events > div > div:nth-child(3) > h6 {
+  width: 15rem;
   font-size: 22px;
   color: #25315d;
 }
@@ -121,7 +122,7 @@
 
 .events > div > div:nth-child(4) > div > div:nth-child(1) > div:nth-child(1) {
   background-color: #fee580;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 3rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -135,7 +136,7 @@
   > div:nth-child(1)
   > div:nth-child(1)
   > h6 {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
 }
 
 .events
@@ -165,10 +166,9 @@
   }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 850px) {
   .events {
-    padding: 0rem 1rem;
-    gap: 2rem;
+    padding: 0rem 2rem;
   }
   .events > div {
     gap: 1rem;
@@ -226,7 +226,7 @@
     gap: 0.5rem;
   }
   .events > div > div:nth-child(4) > div > div:nth-child(1) > div:nth-child(1) {
-    padding: 0.4rem 0.8rem;
+    padding: 0.2rem 2rem;
   }
   .events
     > div
@@ -252,5 +252,11 @@
     font-size: 0.6rem;
     padding: 0.3rem 0.5rem;
     text-align: center;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .events {
+    padding: 0rem 1rem;
   }
 }
