--- a/src/Components/Hero/Hero.module.css
+++ b/src/Components/Hero/Hero.module.css
@@ -1,6 +1,6 @@
 .hero {
   width: 100vw;
-  height: 100vh;
+  height: 85vh;
   background-image: url("../../../public/assets/images/bgWeb.png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -20,18 +20,18 @@
   width: 60%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: start;
+  align-items: start;
+  justify-content: center;
   gap: 1.5rem;
 }
 
 .hero h2 {
-  font-size: 4rem;
+  font-size: 3rem;
   text-align: left;
 }
 
 .hero p {
-  font-size: 2.25rem;
+  font-size: 1.5rem;
   text-align: left;
 }
 
@@ -44,20 +44,26 @@
 
 .hero > div:nth-child(2) > img:nth-child(1) {
   position: absolute;
-  top: 24rem;
-  right: 19rem;
+  top: 19rem;
+  right: 18rem;
+}
+
+.hero > div:nth-child(2) > img:nth-child(2) {
+  height: 30rem;
+  width: auto;
+}
+
+.swiper-wrapper {
+  padding-right: 2rem; /* Adjust the padding as needed */
+  width: calc(100% - 100rem); /* Adjust the width calculation if necessary */
+  overflow: hidden; /* Ensure overflow is hidden to prevent horizontal scroll */
+  background-size: contain;
 }
 
 
 @media screen and (max-width: 1000px) {
   .hero > div:nth-child(2) {
     display: none;
-  }
-  .hero h2 {
-    font-size: 3.5rem;
-  }
-  .hero p {
-    font-size: 2rem;
   }
 }
 
