--- a/src/Components/AboutUs/AboutUs.module.css
+++ b/src/Components/AboutUs/AboutUs.module.css
@@ -5,11 +5,12 @@
   flex-direction: column;
   align-items: start;
   justify-content: center;
-  gap: 3rem;
+  gap: 0.5rem;
 }
 
 .about p {
-  font-size: 18px;
+  font-size: 28px;
+  text-align: justify;
 }
 
 .about > div > div {
@@ -31,7 +32,7 @@
     gap: 1rem;
   }
   .about p {
-    font-size: 1rem;
+    font-size: 0.85rem;
   }
   .about > div > div {
     flex-direction: column;
