--- a/src/Components/Events/Events.module.css
+++ b/src/Components/Events/Events.module.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: start;
   justify-content: center;
-  gap: 2rem;
+  gap: 4rem;
 }
 
 .events > div {
@@ -26,7 +26,7 @@
 }
 
 .events > div > div:nth-child(1) > p {
-  font-size: 2.25rem;
+  font-size: 2.1rem;
   color: #000000ab;
   cursor: pointer;
   text-align: center;
@@ -64,6 +64,8 @@
 .events > div > div:nth-child(2) > div > div > h4 {
   padding: 0.8rem 2rem;
   font-size: 19px;
+  text-align: end;
+  width: 14rem;
 }
 
 .events > div > div:nth-child(2) > div > div > h4:nth-child(1) {
@@ -93,7 +95,6 @@
 }
 
 .events > div > div:nth-child(3) > h6 {
-  width: 15rem;
   font-size: 22px;
   color: #25315d;
 }
@@ -202,6 +203,7 @@
   .events > div > div:nth-child(2) > div > div > h4 {
     padding: 0.5rem 1rem;
     font-size: 1rem;
+    width: auto;
   }
   .events > div > div:nth-child(2) > div > h4 {
     color: white;
