--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -54,6 +54,13 @@
   gap: 2rem;
 }
 
+.footer > div:nth-child(2) > div:nth-child(1) div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.6rem;
+}
+
 .footer > div:nth-child(2) > div:nth-child(1) div > img {
   width: auto;
   height: 1.8rem;
@@ -65,13 +72,13 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  width: 20%;
+  width: 25%;
 }
 
 .footer > div:nth-child(2) ul {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 0.8rem;
 }
 
 .footer li {
