--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -1,14 +1,14 @@
 .navbar {
-  width: 95%;
-  height: 5.9375rem;
+  width: 97%;
+  height: 4rem;
   background-color: #fff9e0;
   position: absolute;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 1rem 2rem;
-  top: 6.4rem;
-  left: 2.5%;
+  top: 5rem;
+  left: 1.5%;
   box-shadow: 0px 4px 4px 0px #00000040;
 }
 
@@ -16,7 +16,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 8rem;
+  gap: 9rem;
+  width: 95%;
 }
 
 .navbar > div {
@@ -92,7 +93,11 @@
   border: none;
 }
 
-@media screen and (max-width: 1488px) {
+.navbar h3 {
+  font-size: 1.2rem;
+}
+
+@media screen and (max-width: 1450px) {
   .navbar > ul {
     gap: 7rem;
   }
