--- a/src/Components/Showcase/Showcase.module.css
+++ b/src/Components/Showcase/Showcase.module.css
@@ -18,12 +18,17 @@
   background: #fecb02;
 }
 
+.show > div:nth-child(1) > div:nth-child(1) {
+  padding-left: 2rem;
+}
+
 .show > div:nth-child(1) > div {
   color: white;
   border: 1px solid #0a5495;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
+  padding: 0 1rem;
   height: 4.8rem;
   width: 13.8333rem;
   gap: 0.5rem;
