--- a/src/app/mba/Mba.module.css
+++ b/src/app/mba/Mba.module.css
@@ -13,6 +13,17 @@
   padding-bottom: 4rem;
 }
 
+.head {
+  padding: 0 6rem;
+  width: 100%;
+  display: flex;
+  justify-content: start;
+}
+
+.head h5 {
+  width: 84%;
+}
+
 .mba {
   width: 100%;
   height: 100%;
@@ -21,4 +32,10 @@
   align-items: center;
   justify-content: center;
   gap: 4rem;
+}
+
+@media screen and (max-width: 800px) {
+  .head {
+    padding: 0 1rem;
+  }
 }
