--- a/src/Components/Events/Events.module.css
+++ b/src/Components/Events/Events.module.css
@@ -159,12 +159,33 @@
   border-radius: 1.25rem;
 }
 
+@media screen and (max-width: 1360px) {
+  .events > div > div:nth-child(2) > div > div {
+    gap: 10%;
+  }
+  .events > div > div:nth-child(2) > div > div > h4 {
+    font-size: 0.9rem;
+  }
+  .events > div > div:nth-child(2) > div {
+    width: 70%;
+    gap: 2rem;
+  }
+}
+
 @media screen and (max-width: 1200px) {
   .events {
     width: 100%;
     padding: 4rem 2rem;
     gap: 4rem;
   }
+  .events > div > div:nth-child(2) > div {
+    width: 80%;
+    gap: 1rem;
+  }
+  .events > div > div:nth-child(2) {
+    gap: 2rem;
+  }
+  
 }
 
 @media screen and (max-width: 850px) {
@@ -201,9 +222,10 @@
     gap: 1.5rem;
   }
   .events > div > div:nth-child(2) > div > div > h4 {
+    padding-left: 0;
     padding: 0.5rem 1rem;
-    font-size: 1rem;
-    width: auto;
+    font-size: 0.8rem;
+    width: 9rem;
   }
   .events > div > div:nth-child(2) > div > h4 {
     color: white;
