--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -141,26 +141,23 @@
     padding: 0 2rem;
     gap: 1rem;
   }
-  
+
   .footer > div:nth-child(2) > div:nth-child(2),
   .footer > div:nth-child(2) > div:nth-child(3),
   .footer > div:nth-child(2) > div:nth-child(4) {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
     width: 30%;
   }
-  
+
   .footer > div:nth-child(2) ul {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
   }
-  
+
   .footer li {
     font-size: 0.8rem;
   }
-  
+
   .footer > div:nth-child(2) > div:nth-child(4) > ul > li {
     display: flex;
     gap: 0.5rem;
@@ -169,7 +166,8 @@
   .footer span {
     font-size: 1.1rem;
   }
-  .footer p, .footer li {
+  .footer p,
+  .footer li {
     font-size: 0.8rem;
   }
   .footer > div:nth-child(3) {
@@ -181,8 +179,32 @@
   }
   .footer > div:nth-child(3) p {
     font-size: 0.7rem;
-  } 
+  }
   .footer > div:nth-child(3) > div {
     gap: 0.5rem;
-  }  
+  }
+}
+@media screen and (max-width: 667px) {
+  .footer > div:nth-child(2) > div:nth-child(1) {
+    width: 80%;
+    padding: 0 2rem;
+    gap: 1rem;
+  }
+  /* .footer > div:nth-child(2) {
+    flex-wrap: nowrap;
+
+  } */
+  .footer > div:nth-child(2) > div:nth-child(2),
+  .footer > div:nth-child(2) > div:nth-child(3) {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    width: 30%;
+  }
+  .footer > div:nth-child(2) > div:nth-child(4) {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    width: 90%;
+  }
 }
