--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,8 +15,11 @@ body {
   scroll-behavior: smooth;
 }
 
-.body::-webkit-scrollbar {
+.body::-webkit-scrollbar, .html::-webkit-scrollbar {
   display: none;
+  width: 0px;
+  height: 0px;
+  background: transparent;
 }
 
 body {
