--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,9 +13,10 @@ body {
   overflow-x: hidden;
   font-family: "Roboto", sans-serif;
   scroll-behavior: smooth;
+  scrollbar-width: none;
 }
 
-.body::-webkit-scrollbar, .html::-webkit-scrollbar {
+body::-webkit-scrollbar {
   display: none;
   width: 0px;
   height: 0px;
