--- a/src/Components/AboutUs/AboutUs.module.css
+++ b/src/Components/AboutUs/AboutUs.module.css
@@ -24,6 +24,9 @@
     padding: 3rem 2rem;
     gap: 3rem;
   }
+  .about > div > div {
+    flex-direction: column;
+  }
 }
 
 @media screen and (max-width: 800px) {
