--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  overflow-y: auto;
   font-family: "Roboto", sans-serif;
   scroll-behavior: smooth;
   scrollbar-width: none;
