--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -95,6 +95,13 @@ h5 {
   width: 100%;
 }
 
+.about, .events {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
 
 @media screen and (max-width: 800px) {
   h5 {
