--- a/src/Components/Contact/Contact.module.css
+++ b/src/Components/Contact/Contact.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   padding: 5rem 8rem;
   display: flex;
-  align-items: center;
+  align-items: end;
   justify-content: space-between;
   gap: 3rem;
 }
