--- a/src/Components/EventHome/EventHome.module.css
+++ b/src/Components/EventHome/EventHome.module.css
@@ -61,7 +61,7 @@
 }
 
 .admit {
-  width: 95%;
+  width: 85%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -78,6 +78,11 @@
   gap: 0.8rem;
   width: 330px;
   height: 350px;
+}
+
+.admit b {
+  font-weight: 500;
+  color: #fecb02;
 }
 
 @media screen and (max-width: 806px) {
