--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -103,6 +103,7 @@ h5 {
   width: 100%;
 }
 
+
 @media screen and (max-width: 800px) {
   h5 {
     font-size: 1.5rem;
@@ -111,5 +112,8 @@ h5 {
   .swiper {
     width: 18rem;
   }
+  .events > img {
+    height: auto;
+  }  
 }
 
