--- a/src/Components/EventHome/EventHome.module.css
+++ b/src/Components/EventHome/EventHome.module.css
@@ -85,10 +85,14 @@
   color: #fecb02;
 }
 
+.admit img {
+  box-shadow: 0px 8px 24.1px 0px #00000040;
+}
+
 @media screen and (max-width: 806px) {
-    .admit {
-        justify-content: center;
-    }
+  .admit {
+    justify-content: center;
+  }
 }
 
 @media screen and (max-width: 390px) {
