--- a/src/Components/Contact/Contact.module.css
+++ b/src/Components/Contact/Contact.module.css
@@ -1,3 +1,9 @@
+.c {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .con {
   width: 100%;
   padding: 5rem 8rem;
@@ -23,6 +29,22 @@
   font-size: 1.5rem;
 }
 
+.con1 {
+  display: flex;
+  width: 83%;
+  gap: 2rem;
+  margin-bottom: 3rem;
+}
+
+.con1 > div {
+  width: 50%;
+}
+
+.con1 > div > img {
+  width: 40vw;
+  height: auto;
+}
+
 @media screen and (max-width: 1110px) {
   .con {
     padding: 3rem 1rem;
@@ -45,7 +67,7 @@
   .con > div:nth-child(1) > p {
     font-size: 1.25rem;
   }
-  .con > div:nth-child(1) > img {
+  .con > div > img {
     height: 13rem;
     width: 20rem;
   }
