--- a/src/Components/Countries/Countries.module.css
+++ b/src/Components/Countries/Countries.module.css
@@ -14,6 +14,7 @@
 
 .countries > div:nth-child(2) {
   width: 100%;
+  padding: 0 10rem;
 }
 
 .countries > div:nth-child(1) {
@@ -29,7 +30,6 @@
   }
 }
 
-
 @media screen and (max-width: 1200px) {
   .countries {
     padding: 1rem 2rem;
@@ -41,6 +41,9 @@
   .countries {
     align-items: start;
   }
+  .countries > div:nth-child(2) {
+    padding: 0;
+  }
 }
 
 @media screen and (max-width: 800px) {
@@ -50,5 +53,8 @@
   }
   .countries {
     align-items: start;
+  }
+  .countries p {
+    font-size: 1rem;
   }
 }
