--- a/src/Components/USA/USA.module.css
+++ b/src/Components/USA/USA.module.css
@@ -68,6 +68,10 @@
   align-items: center;
 }
 
+.usa a {
+  color: black;
+}
+
 .usa button {
   box-shadow: 0px 8px 8px 0px #00000040;
   background-color: #fecb02;
