--- a/src/Components/EventHome/EventHome.module.css
+++ b/src/Components/EventHome/EventHome.module.css
@@ -57,7 +57,7 @@
 }
 
 #clicked {
-  background-color: #fecb02;
+  background-color: #fdc010;
 }
 
 .admit {
@@ -82,7 +82,7 @@
 
 .admit b {
   font-weight: 500;
-  color: #fecb02;
+  color: #fdc010;
 }
 
 .admit img {
