--- a/src/Components/Events/Events.module.css
+++ b/src/Components/Events/Events.module.css
@@ -16,7 +16,7 @@
 }
 
 .events h1 {
-  color: #fecb02;
+  color: #fdc010;
   font-size: 3rem;
 }
 
@@ -154,7 +154,7 @@
 .events > div > div:nth-child(4) > div > p {
   font-size: 1.4rem;
   padding: 0.8rem 1.2rem;
-  background: linear-gradient(0deg, #fecb02, #fecb02);
+  background: linear-gradient(0deg, #fdc010, #fdc010);
   cursor: pointer;
   border-radius: 1.25rem;
 }
