--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: center;
   gap: 1rem;
-  background-color: #0a5495;
+  background-color: #4267b1;
   color: white;
 }
 
@@ -30,7 +30,7 @@
   font-size: 1.75rem;
   padding: 0.5rem 3rem;
   box-shadow: 0px 4px 24.1px 0px #ffffff40;
-  background-color: #fecb02;
+  background-color: #fdc010;
   border-radius: 2rem;
 }
 
