--- a/src/Components/GmatWhat/GmatWhat.module.css
+++ b/src/Components/GmatWhat/GmatWhat.module.css
@@ -54,7 +54,7 @@
 
 .girl h2 {
   color: white;
-  background-color: #0a5495;
+  background-color: #4267b1;
   width: 100%;
   padding: 0.8rem 3.5rem;
   text-align: right;
