--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -72,7 +72,7 @@ h5 {
   font-weight: 400;
   font-size: 2.5rem;
   padding: 1.2rem 3rem;
-  background-color: #0a5495;
+  background-color: #4267b1;
   border-top-right-radius: 2rem;
   border-end-end-radius: 2rem;
   color: white;
