--- a/src/Components/Blog/Blog.module.css
+++ b/src/Components/Blog/Blog.module.css
@@ -25,7 +25,7 @@
 }
 
 #clicked {
-  background-color: #fecb02;
+  background-color: #fdc010;
 }
 
 .blog > div:nth-child(2) {
@@ -59,7 +59,7 @@
 .blog > div:nth-child(2) > div:nth-child(1) > main > div {
   padding: 1.5rem 2rem;
   max-width: 100%;
-  background-color: #fecb02;
+  background-color: #fdc010;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -96,7 +96,7 @@
 .blog > div:nth-child(2) > div:nth-child(2) > section > h2 {
   padding-left: 2rem;
   font-size: 2rem;
-  color: #fecb02;
+  color: #fdc010;
 }
 
 .blog > div:nth-child(2) > div:nth-child(2) > div {
@@ -154,12 +154,12 @@
   line-height: 26.95px;
   text-align: center;
   width: 100%;
-  background-color: #fecb02;
+  background-color: #fdc010;
   padding: 1rem;
 }
 
 .blog > div:nth-child(2) > div:nth-child(1) li {
-  color: #fecb02;
+  color: #fdc010;
   font-size: 25px;
   margin-left: 2rem;
 }
