--- a/src/Components/CounsellingHero/CounsellingHero.module.css
+++ b/src/Components/CounsellingHero/CounsellingHero.module.css
@@ -23,7 +23,7 @@
   font-size: 2rem;
   font-weight: 500;
   box-shadow: 0px 4px 23.4px 0px #00000040;
-  background-color: #FECB02;
+  background-color: #fdc010;
   color: white;
   padding: 0.7rem 1.5rem;
   border-radius: 1rem;
