--- a/src/Components/Form/Form.module.css
+++ b/src/Components/Form/Form.module.css
@@ -67,7 +67,7 @@
 }
 
 .form > button {
-  background-color: #fecb02;
+  background-color: #fdc010;
   box-shadow: 0px 4px 24px 0px #00000040;
   color: white;
   font-weight: 500;
@@ -101,7 +101,7 @@
 
 .form ul {
   padding: 0 1rem;
-  border: 1px solid #fecb02;
+  border: 1px solid #fdc010;
   background-color: #fffbed;
   border-radius: 12px;
   position: absolute;
