--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -5,7 +5,7 @@
 }
 
 .header > div:nth-child(1) {
-  background-color: #0a5495;
+  background-color: #4267b1;
   display: flex;
   padding: 0.2rem 2.8rem;
   justify-content: space-between;
