--- a/src/Components/Hero/Hero.module.css
+++ b/src/Components/Hero/Hero.module.css
@@ -4,7 +4,7 @@
   background-image: url("../../../public/assets/images/bgWeb.png");
   background-repeat: no-repeat;
   background-size: cover;
-  background-color: #0a5495;
+  background-color: #4267b1;
   padding: 0 2rem;
   padding-right: 6rem;
   display: flex;
