--- a/src/Components/Modal/Modal.module.css
+++ b/src/Components/Modal/Modal.module.css
@@ -1,20 +1,53 @@
 /* src/Modal.css */
-.modal-backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.modalBackdrop {
+  position: fixed;
+  top: 9%;
+  left: 15%;
+  width: 70vw;
+  height: 82vh;
+  background-color: #fffbed;
+  z-index: 1000;
+}
+
+.modalContent {
+  background-color: #fffbed;
+  border-radius: 5px;
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  flex-direction: column;
+  padding: 2rem;
+  gap: 1rem;
+}
+
+.head {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+}
+
+.img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 6rem;
+  width: 100%;
+}
+
+@media screen and (max-width: 1100px) {
+  .modalBackdrop {
+    left: 5%;
+    width: 90vw;
+    top: 2%;
   }
-  
-  .modal-content {
-    background: white;
-    padding: 20px;
-    border-radius: 5px;
-    text-align: center;
+  .img {
+    flex-direction: column;
+    gap: 1rem;
   }
-  
+  .img > img {
+    height: 10rem;
+    width: auto;
+    display: none;
+  }
+}
