--- a/src/Components/Testimonials/Testimonials.module.css
+++ b/src/Components/Testimonials/Testimonials.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 0;
+  gap: 0.5rem;
 }
 
 #rev > img {
@@ -18,5 +18,8 @@
 
   #rev, #rev2 {
     padding: 0.3rem, 0rem;
+  }
+  .testi {
+    gap: 0;
   }
 }
