--- a/src/Components/Contact/Contact.module.css
+++ b/src/Components/Contact/Contact.module.css
@@ -1,19 +1,24 @@
 .c {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  align-items: start;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  padding: 2rem 4rem;
 }
 
 .con {
-  width: 100%;
-  padding: 5rem 8rem;
+  width: 45%;
+  flex-direction: column;
   display: flex;
-  align-items: end;
-  justify-content: space-between;
-  gap: 3rem;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+
 }
 
 .con > div:nth-child(1) {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: start;
@@ -26,49 +31,56 @@
 }
 
 .con > div:nth-child(1) > p {
-  font-size: 1.5rem;
+  font-size: 1.4rem;
+}
+
+.con > div:nth-child(2) {
+  width: 100%;
+}
+
+.con img {
+  width: 92%;
+  height: auto;
 }
 
 .con1 {
   display: flex;
-  width: 83%;
-  gap: 2rem;
-  margin-bottom: 3rem;
+  width: 45%;
+  flex-direction: column;
+  align-items: start;
+  margin-top: 5.5rem;
+  padding-left: 3rem;
+  gap: 4rem;
+  height: 100%;
+  border-left: 5px solid #D9D9D9;
 }
 
 .con1 > div {
-  width: 50%;
+  width: 90%;
+  height: 55vh;
 }
 
-.con1 > div > img {
-  width: 40vw;
-  height: auto;
-}
-
-@media screen and (max-width: 1110px) {
+@media screen and (max-width: 800px) {
+  .c {
+    flex-direction: column;
+    padding: 1rem 1.5rem;
+  }
   .con {
-    padding: 3rem 1rem;
-    flex-direction: column;
-    gap: 3rem;
+    width: 100%;
   }
-
-  .con > div:nth-child(1) {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    justify-content: center;
-    gap: 1.5rem;
+  .con1 {
+    width: 100%;
+    padding: 0;
+    border: none;
   }
-
+  .con1 > div {
+    width: 100%;
+    height: 30vh;
+  }
   .con > div:nth-child(1) > h2 {
-    font-size: 2.5rem;
-  }
-
+    font-size: 2rem;
+  } 
   .con > div:nth-child(1) > p {
-    font-size: 1.25rem;
-  }
-  .con > div > img {
-    height: 13rem;
-    width: 20rem;
+    font-size: 1rem;
   }
 }
