--- a/src/Components/Form/Form.module.css
+++ b/src/Components/Form/Form.module.css
@@ -4,12 +4,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: start;
-  gap: 1.5rem;
+  gap: 0.7rem;
 }
 
 .form label {
-  font-size: 1.23rem;
+  font-size: 1.1rem;
   font-weight: 500;
+  margin-left: 0.2rem;
 }
 
 .form h3 {
@@ -63,7 +64,7 @@
 }
 
 .form input {
-  font-size: 1rem;
+  font-size: 0.85rem;
 }
 
 .form > button {
@@ -105,6 +106,7 @@
   background-color: #fffbed;
   border-radius: 12px;
   position: absolute;
+  z-index: 500;
 
 }
 
