--- a/src/app/navpage/navpage.module.css
+++ b/src/app/navpage/navpage.module.css
@@ -1,4 +1,4 @@
-.nav {
+/* .nav {
   width: 100vw;
   height: 74vh;
   background-color: #fff9e0;
@@ -6,6 +6,36 @@
   align-items: start;
   justify-content: center;
   padding: 1rem 2rem;
+} */
+
+.nav {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem 2rem;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #fff9e0;
+  transform: translateX(-100%);
+  animation: slide-in 0.5s forwards;
+}
+
+@keyframes slide-in {
+  40% {
+    transform: translateX(20%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.abs {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
 }
 
 .nav > ul {
@@ -14,7 +44,7 @@
     flex-direction: column;
     align-items: start;
     justify-content: space-evenly;
-    gap: 1rem;
+    gap: 2rem;
 }
 
 .nav > ul > li > ul > li {
