--- a/src/Components/AdmitContainer/AdmitContainer.module.css
+++ b/src/Components/AdmitContainer/AdmitContainer.module.css
@@ -13,12 +13,12 @@
   background-color: #fff1bc;
   box-shadow: 0px 8px 24px 0px #00000040;
   border-radius: 1.5rem;
-  padding: 2rem;
+  padding: 1rem 2rem;
   display: flex;
   justify-content: start;
   align-items: start;
   gap: 2rem;
-  width: 22rem;
+  width: 24rem;
 }
 
 .ac > div > img {
