--- a/src/Components/Modal/Modal.module.css
+++ b/src/Components/Modal/Modal.module.css
@@ -5,7 +5,7 @@
   height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   background: rgba(0, 0, 0, 0.7);
   z-index: 1000;
 }
@@ -20,14 +20,15 @@
   align-items: start;
   justify-content: center;
   flex-direction: column;
+  margin-top: 1.5rem;
   padding: 2rem;
   gap: 1rem;
 }
 
 .abs {
   position: absolute;
-  top: 10%;
-  right: 16%;
+  top: 5%;
+  right: 15.8%;
 }
 
 .head {
