--- a/src/Components/About/About.module.css
+++ b/src/Components/About/About.module.css
@@ -10,19 +10,13 @@
   font-weight: 500;
 }
 
-.about p {
+.about p, .about li {
   font-size: 20px;
   text-align: justify;
   line-height: 30px;
 }
 
-.about li {
-  font-size: 20px;
-  text-align: justify;
-}
-
-.about ul {
-  list-style-type: disc;
+.about ol {
   padding-left: 1.4rem;
 }
 
