--- a/src/Components/AdmitContainer/AdmitContainer.module.css
+++ b/src/Components/AdmitContainer/AdmitContainer.module.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  padding: 4rem;
+  padding: 2rem 4rem;
   background-color: #d9d9d9;
   gap: 4rem;
 }
