--- a/src/Components/Card/Card.module.css
+++ b/src/Components/Card/Card.module.css
@@ -9,7 +9,7 @@
 }
 
 .card > div:nth-child(1) {
-  width: 8rem;
+  width: 7rem;
   border-top-right-radius: 50rem;
   border-top-left-radius: 50rem;
   display: flex;
@@ -19,12 +19,17 @@
   padding: 0.5rem 0;
 }
 
+.card p {
+  font-size: 0.9rem;
+}
+
 .card > div:nth-child(2) > p:nth-child(1) {
   background-color: #fdc010;
   color: white;
   font-weight: 500;
-  font-size: 18px;
-  width: 14.3rem;
+  font-size: 16px;
+  width: 13rem;
+  text-align: justify;
   border-radius: 19px;
   padding: 0.6rem 0.1rem;
   display: flex;
@@ -34,15 +39,20 @@
 }
 
 .card > div:nth-child(2) {
-  width: 19.125rem;
-  height: 14.375rem;
+  width: 17.8rem;
+  height: 12rem;
   box-shadow: 0px 8px 21.5px 0px #a04c16;
   background-color: #fff1bc;
-  border-radius: 3rem;
+  border-radius: 2.5rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
-  gap: 2rem;
-  padding: 0.5rem 1rem;
+  gap: 1.5rem;
+  padding: 1rem 0.8rem;
+}
+
+.card img {
+  width: 3rem;
+  height: 3rem;
 }
